<?xml version="1.0"?>
<package format="3">
  <name>sensor_fusion</name>
  <version>0.0.0</version>
  <description>A simple ROS 2 package for sensor fusion.</description>
  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
